fix(responses): fix typos, paths, link add account group, update docs
