# services/abysscore/docs/swagger.json
@@ -9,6 +9,129 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/account/email/enter_code": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Verifies sent code and links email to account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Account"
+                ],
+                "summary": "Verify sent code",
+                "parameters": [
+                    {
+                        "description": "Verification code from email",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.EnterCodeForEmailLinkRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Email successfully linked",
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request - wrong verification code",
+                        "schema": {
+                            "$ref": "#/definitions/examples.BadRequestResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict - user already has linked email",
+                        "schema": {
+                            "$ref": "#/definitions/examples.AccountAlreadyHasLinkedEmail"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable entity - invalid request types",
+                        "schema": {
+                            "$ref": "#/definitions/examples.UnprocessableEntityResponse"
+                        }
+                    },
+                    "429": {
+                        "description": "Too many requests - received too many requests",
+                        "schema": {
+                            "$ref": "#/definitions/examples.TooManyRequestsResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/account/email/get_code": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Sends verification code for email linking",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Account"
+                ],
+                "summary": "Send email verification code",
+                "parameters": [
+                    {
+                        "description": "Email for linking",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.LinkEmailRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Code successfully sent"
+                    },
+                    "400": {
+                        "description": "Bad request - missed request fields",
+                        "schema": {
+                            "$ref": "#/definitions/examples.BadRequestResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict - someone already has this email as linked",
+                        "schema": {
+                            "$ref": "#/definitions/examples.EmailConflict"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable entity - invalid request types",
+                        "schema": {
+                            "$ref": "#/definitions/examples.UnprocessableEntityResponse"
+                        }
+                    },
+                    "429": {
+                        "description": "Too many requests - received too many requests",
+                        "schema": {
+                            "$ref": "#/definitions/examples.TooManyRequestsResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/auth/change_password": {
             "post": {
                 "description": "Changes the password for an existing user",
@@ -864,6 +987,25 @@
                 }
             }
         },
+        "examples.AccountAlreadyHasLinkedEmail": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 409
+                },
+                "detail": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "account already has linked email"
+                },
+                "path": {
+                    "type": "string"
+                }
+            }
+        },
         "examples.AuthenticationSuccessResponse": {
             "type": "object",
             "properties": {
@@ -921,6 +1063,25 @@
                 "message": {
                     "type": "string",
                     "example": "success"
+                },
+                "path": {
+                    "type": "string"
+                }
+            }
+        },
+        "examples.EmailConflict": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 409
+                },
+                "detail": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "email conflict"
                 },
                 "path": {
                     "type": "string"
@@ -1254,6 +1415,31 @@
                 }
             }
         },
+        "request.EnterCodeForEmailLinkRequest": {
+            "type": "object",
+            "required": [
+                "verification_code"
+            ],
+            "properties": {
+                "verification_code": {
+                    "type": "string",
+                    "example": "Q2JV01"
+                }
+            }
+        },
+        "request.LinkEmailRequest": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "description": "TODO: validate: email",
+                    "type": "string",
+                    "example": "intezya@gmail.com"
+                }
+            }
+        },
         "request.PasswordChangeRequest": {
             "type": "object",
             "required": [
@@ -1278,6 +1464,9 @@
         },
         "request.SetItemAsCurrent": {
             "type": "object",
+            "required": [
+                "inventory_item_id"
+            ],
             "properties": {
                 "inventory_item_id": {
                     "type": "integer"
